# GrUMPy

./: .gitattributes  .gitignore  2Dpolyhedron.py  AUTHORS  BBTree.html  BranchAndBound.html  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.md  __init__.py  baktree.py  class-tree.html  coinor.grumpy-pysrc.html  coinor.grumpy.BB.BBTree-class.html  coinor.grumpy.examples-module.html  coinor.grumpy.examples.DecompVis-module.html  coinor.grumpy.examples.LP1-module.html  coinor.grumpy.examples.LP2-module.html  coinor.grumpy.examples.LP2-pysrc.html  coinor.grumpy.examples.LP3-module.html  coinor.grumpy.examples.LP3-pysrc.html  coinor.grumpy.examples.LP4-module.html  coinor.grumpy.examples.LP6-module.html  coinor.grumpy.examples.LP7-module.html  coinor.grumpy.examples.LP8-module.html  coinor.grumpy.examples.LP8-pysrc.html  coinor.grumpy.examples.LP9-module.html  coinor.grumpy.examples.LP9-pysrc.html  coinor.grumpy.examples.generators-module.html  coinor.grumpy.examples.run-pysrc.html  coinor.grumpy.forecasting-pysrc.html  coinor.grumpy.forecasting.DoubleExponentialSmoothingForecaster-class.html  coinor.grumpy.forecasting.ProgressMeasurement-class.html  coinor.grumpy.polyhedron2D-module.html  coinor.grumpy.polyhedron2D-pysrc.html  coinor.grumpy.polyhedron2D.Figure-class.html  configure  (+22 more)
.coin-or/: projDesc.xml
.github/workflows/: _tests.yml  pr.yml  publish.yml
docs/html/: BBTree.html  api-objects.txt  class-tree.html  coinor.grumpy-module.html  coinor.grumpy-pysrc.html  coinor.grumpy.BB-module.html  coinor.grumpy.BB-pysrc.html  coinor.grumpy.BB.BBTree-class.html  coinor.grumpy.examples-pysrc.html  coinor.grumpy.examples.DecompVis-pysrc.html  coinor.grumpy.examples.DisplayPolyhedronAndSolveLP-module.html  coinor.grumpy.examples.DisplayPolyhedronAndSolveLP-pysrc.html  coinor.grumpy.examples.LP1-pysrc.html  coinor.grumpy.examples.LP4-pysrc.html  coinor.grumpy.examples.LP5-module.html  coinor.grumpy.examples.LP5-pysrc.html  coinor.grumpy.examples.LP6-pysrc.html  coinor.grumpy.examples.LP7-pysrc.html  coinor.grumpy.examples.generators-pysrc.html  coinor.grumpy.examples.run-module.html  coinor.grumpy.forecasting-module.html  coinor.grumpy.forecasting-pysrc.html  coinor.grumpy.forecasting.DoubleExponentialSmoothingForecaster-class.html  coinor.grumpy.forecasting.ForecastingChainedSequences-class.html  coinor.grumpy.forecasting.ProgressMeasurement-class.html  coinor.grumpy.forecasting.TimeForecast-class.html  coinor.grumpy.polyhedron2D-module.html  coinor.grumpy.polyhedron2D-pysrc.html  coinor.grumpy.polyhedron2D.Figure-class.html  coinor.grumpy.polyhedron2D.Polyhedron2D-class.html  forecasting.html  frames.html  help.html  identifier-index.html  module-tree.html  polyhedron2D.html  redirect.html  toc-coinor.grumpy-module.html  toc-coinor.grumpy.BB-module.html  toc-coinor.grumpy.examples.LP1-module.html  (+8 more)
docs/html/examples/: BBVis.html  DecompVis.html  LP1.html  LP2.html  LP4.html  LP6.html  LP8.html  index.html
docs/pdf/: api.aux  api.dvi  api.idx  api.ilg  api.ind  api.out  api.ps  api.tex  api.toc  coinor.grumpy-module.aux  coinor.grumpy-module.tex  coinor.grumpy.BB-module.aux  coinor.grumpy.BB-module.tex  coinor.grumpy.examples-module.tex  coinor.grumpy.examples.DecompVis-module.tex  coinor.grumpy.examples.DisplayPolyhedronAndSolveLP-module.tex  coinor.grumpy.examples.LP1-module.tex  coinor.grumpy.examples.LP2-module.tex  coinor.grumpy.examples.LP3-module.tex  coinor.grumpy.examples.LP4-module.tex  coinor.grumpy.examples.LP5-module.tex  coinor.grumpy.examples.LP6-module.tex  coinor.grumpy.examples.LP7-module.tex  coinor.grumpy.examples.LP8-module.tex  coinor.grumpy.examples.LP9-module.tex  coinor.grumpy.examples.generators-module.tex  coinor.grumpy.examples.run-module.tex  coinor.grumpy.forecasting-module.aux  coinor.grumpy.forecasting-module.tex  coinor.grumpy.polyhedron2D-module.aux  coinor.grumpy.polyhedron2D-module.tex
examples/: CuttingPlaneAnimation.py  Dippy.html  Dippy.py  DisplayPolyhedron.html  DisplayPolyhedronAndSolveLP.html  DrawPolyhedron.py  GMI-Example.html  Gomory-Animation.py  LP3.html  LP5.html  LP7.html  LP9.html  MIP1.py  MIP2.py  MIP3.py  MIP4.py  MIP5.py  generators.html  run.py
examples/c_prog/: Makefile  c_prog.c
grumpy/: Polyhedron2D.py  __init__.py  grumpy.py
informs2012presentation/: visualization.tex
src/grumpy/: BB.py  BBTree.py  BranchAndBound.py  Makefile.am  Makefile.in  TODO  __init__.py  __main__.py  forecasting.py  polyhedron2D.py
src/grumpy/examples/: BBVis.py  DecompVis.py  Dippy.py  DisplayPolyhedron.py  DisplayPolyhedronAndSolveLP.py  DrawPolyhedron.py  GMI-Example.py  InverseProblemVisualization.py  LP1.py  LP2.py  LP3.py  LP4.py  LP5.py  LP6.py  LP7.py  LP8.py  LP9.py  __init__.py  generators.py  p0201_SYMPHONY.vbc  run.py
test/: Makefile.am  Makefile.in  create.sh  strategy_test_results.txt  test_bb.py  test_bb_pulp.py  test_display.py  test_strategies.py
