[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "coinor.grumpy"
version = "0.95.2"
description = "Graphics for Understanding Mathematical Programming in Python"
readme = "README.md"
license = { text = "Eclipse Public License" }
authors = [
    { name = "Ted Ralphs", email = "ted@lehigh.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "coinor.gimpy",
    "pulp",
    "pypolyhedron"
]

[project.urls]
Homepage = "https://github.com/coin-or/GrUMPy"
Repository = "https://github.com/coin-or/GrUMPy"
Documentation = "https://coin-or.github.io/GrUMPy/"

[tool.setuptools]
packages = ["coinor", "coinor.grumpy", "coinor.grumpy.examples"]

[tool.setuptools.package-dir]
"coinor" = "src"
"coinor.grumpy" = "src/grumpy"

[dependency-groups]
dev = [
    "pytest >= 8.0.0",
    "ruff >= 0.3.0",
]

[tool.pytest]
testpaths = ["test"]
addopts = ["--import-mode=importlib"]
