
#============================================================================#
# This file is part of the GrUMPy library                                    #
#                                                                            #
# GrUMPy is distributed under the Eclipse Public License as part of the      #
# COIN-OR repository (http://www.coin-or.org).                               #
#                                                                            #
# Authors: Brady Hunsaker, Google (bhunsaker@google.com)                     #
#          Osman Ozaltin, University of Waterloo (oozaltin@waterloo.edu)     #
#          Aykut Bulut (ayb211@lehigh.edu), Lehigh Univesity                 #
#          Ted Ralphs (ted@lehigh.edu), Lehigh University                    #
#                                                                            #
#                                                                            #
# Copyright (C) 2009-2013, Google, Lehigh University, University of Waterloo,#
# Brady Hunsaker, Osman Ozaltin, Aykut Bulut, and Ted Ralphs                 #
# All Rights Reserved.                                                       #
#============================================================================#

########################################################################
#                               GrUMPy                                  #
########################################################################

GRUMPYdir = $(pythondir)/grumpy

GRUMPY_PYTHON = __init__.py __main__.py forecasting.py BBTree.py polyhedron2D.py
